--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.10.1",
     "lucide-react": "^0.561.0",
-    "@vitejs/plugin-react": "^5.1.2",
-    "vite": "^7.2.7"
+    "vite": "^7.2.7",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
